# Raytracer

./: CMakeLists.txt  LICENSE  README.md
src/: common.h  constexpr_string.h  kernel.cpp  kernel.h  kernel_config.h  logger.h  main.cpp  math.h  ray.h  triangle.h
